Add README to folder structure for instructions on setting up environment

--- a/README
+++ b/README
@@ -1,19 +1,21 @@
-### README for CETI Web
+# README for CETI Web #
 
-Dependencies:
+### Dependencies ###
+Rails
+Git
 Python			"As of writing need 2.7 or 3.4 check AWS"
 python-dev		$ sudo apt-get install python-dev
 pip				$ sudo apt-get install python-pip
 AWS CLI			$ sudo pip install awscli
 EB CLI			$ sudo pip install awsebcli
 
-To set up EB CLI
+### To set up EB CLI ###
 Change your directory to the application directory
-$ eb init
+`$ eb init`
 
 It will display the following:
-Select a default region
-3) us-west-2
+`Select a default region
+3) us-west-2`
 
 Select an application to use:
 1) ceti_sb
