--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -41,6 +41,7 @@ en:
       signed_up_but_unconfirmed: "A message with a confirmation link has been sent to your email address. Please follow the link to activate your account."
       update_needs_confirmation: "You updated your account successfully, but we need to verify your new email address. Please check your email and follow the confirm link to confirm your new email address."
       updated: "Your account has been updated successfully."
+      cancel_needs_password: "Password Required to Deactivate Account"
       user:
         update_with_password: "You have modified your account settings."
     sessions:
